--- a/ecclesia/lectio/mateo/mateo1.html
+++ b/ecclesia/lectio/mateo/mateo1.html
@@ -98,6 +98,7 @@
             deportación a Babilonia hasta Cristo, catorce generaciones. <br>
             <br><br>
           </p>
+          
         </details>
       </li>
       <!-- ****************************** -->
@@ -169,8 +170,13 @@
             Del exilio a Cristo (la restauración final en Jesús). <br>
             Esta estructura muestra que Jesús es el punto culminante de la historia de Israel. <br>
             <br> <br>
+            <!-- //////////////////////////////////// -->
             3. La universalidad de la salvación <br>
-            Mateo incluye a cuatro mujeres en la genealogía: Tamar, Rahab, Rut y Betsabé (esposa de Urías). <br>
+            Mateo incluye a cuatro mujeres en la genealogía: <br><b><i> 
+              Tamar, Gn 38 <br>
+              Rahab, Jos 2; 6,22-25 <br>
+              Rut y 1-4.<br>
+              Betsabé 2Sam 11, 1Re 1,2ss</i></b> <br>
             Lo sorprendente es que todas son extranjeras o tienen historias escandalosas según la tradición judía. <br>
             Esto anticipa que Jesús viene a salvar no solo a los judíos, sino a toda la humanidad, incluyendo pecadores
             y gentiles. <br>
@@ -373,9 +379,7 @@
       <li>
         <details class="select">
           <summary>Variaciones en el Texto</summary>
-          <p>El texto de Mateo 1,18-25 presenta algunas variantes textuales, pero ninguna altera su significado
-            teológico central. Las diferencias principales se encuentran en la redacción de ciertos términos y en la
-            manera en que se traduce el texto griego original en distintas versiones de la Biblia. <br>
+          <p>El texto de Mateo 1,18-25 presenta algunas variantes textuales, pero ninguna altera su significado teológico central. Las diferencias principales se encuentran en la redacción de ciertos términos y en la manera en que se traduce el texto griego original en distintas versiones de la Biblia. <br>
             A continuación, analizo algunas de las diferencias más relevantes entre traducciones reconocidas: <br>
             <br> <br>
             1. Diferencias en Mateo 1,18 - "Compromiso" o "Matrimonio" <br>
