--- a/ecclesia/lectio/mateo/mateo9.html
+++ b/ecclesia/lectio/mateo/mateo9.html
@@ -2149,8 +2149,7 @@ Asimismo, denuncian la actitud farisaica que, cegada por la envidia, se resiste 
 </ol>
 
 <b>Conclusión:</b><br>
-El Magisterio de la Iglesia interpreta esta perícopa como una manifestación del Reino de Dios presente en Cristo, 
-que libera al hombre del mal y lo devuelve a la comunión con el Padre.<br>
+El Magisterio de la Iglesia interpreta esta perícopa como una manifestación del Reino de Dios presente en Cristo, que libera al hombre del mal y lo devuelve a la comunión con el Padre.<br>
 El milagro del mudo simboliza la restauración de la palabra, la fe y la relación viva con Dios.<br>
 La Iglesia, continuadora de esta misión, está llamada a proclamar con obras y palabras la victoria de Cristo sobre el pecado y sobre todo poder que oprime al ser humano.<br>
 
