--- a/ecclesia/oracion/02Statio.html
+++ b/ecclesia/oracion/02Statio.html
@@ -15,12 +15,12 @@
         <a href="#alInicio"
           ><img src="../../media/ESCUDOCARM.png" alt="" class="logoC"
         /></a>
-        <a href="./index.html" class="nombre">INICIO </a>
+        <a href="./compendioOracion.html" class="nombre">INICIO </a>
       </div>
     </header>
     <br /><br />
     <!-- ****************************************************************** -->
-    <h1 class="init">STATIO</h1>
+    <h1 class="init">STATIO2</h1>
     <h3 class="cita">
       "No aceptes como Verdad lo que no proviene del Amor, <br />
       ni aceptes como Amor lo que no proviene de la Verdad" <br />EDITH STEIN
@@ -53,12 +53,111 @@
       </div>
       <!-- /////////////////////////////////////// -->
       <ol>
+              <li>
+      <details class="select">
+        <summary>La Perseverancia</summary>
+        <ol>
+          <li>Gracia fruto de la fe, esperanza y la caridad</li>
+          <li>Es acompañada por la paciencia</li>
+          <li></li>
+          <li></li>
+        </ol>
+        <p><br /><br /></p>
+      </details>
+    </li>
+    <!-- ++++++++++++++++++++++++++++++ -->
+         <li>
+        <details class="select">
+          <summary>Virtus Perseverantiae</summary>
+          <ol>
+            <li>RAE: Cualidad de mantener una acción, un propósito o un esfuerzo de manera constante y sostenida a lo
+              largo del tiempo, a pesar de dificultades, retrasos, obstáculos o desánimos. Implica constancia, paciencia
+              y la capacidad de continuar intentándolo hasta alcanzar un objetivo</li>
+            <li>Ninguna virtud da fruto sin la perseverancia, que es animada por la esperanza, la mueve el amor y la
+              guía la fe. Sin un mínimo de estas virtudes no podremos ser perseverantes.</li>
+            <li>Solo quien ama persevera</li>
+            <li>La perseverancia es acompañada por la paciencia, es la gracia donde Dios nos indica el camino, lo que
+              debemos cambiar, tanto en nosotros como en la realidad. Es vital la escucha atenta del Señor.</li>
+            <li>Conocer que todo es Gracia y que esta siempre nos precede</li>
+            <li>La oración Vocal Diaria <br>
+              Fijar un lugar <br>
+              Un momento al día</li>
+          </ol>
+      </li>
+      <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+      <details class="select">
+        <summary>Mt 1,1-17</summary>
+
+        <ol>
+          <h2>Gratia</h2>
+          <li>Fin, la Voluntad de Dios</li>
+          <li>Virtudes, La Verdad y el Bien</li>
+          <li>Objetivo, interacción entre la realidad y las virtudes</li>
+          <li>Meta, transformar la realidad acorde a las virtudes</li>
+        </ol>
+        <ol>
+          <h2>Conversio</h2>
+          <li>Orden, tener conciencia de las condiciones, posibilidades etc.</li>
+          <li>Prioridades, interacción entre virtudes y orden</li>
+          <li>Actitudes, ensayos de acciones</li>
+        </ol>
+        <ol>
+          <h2>Facere</h2>
+          <li>Acciones, interacción con la realidad</li>
+          <li>Hábito, método inicial</li>
+        </ol>
+        <ol>
+          <h2>Dicere</h2>
+          <li>Método Concreto, mejora la acción concreta y lo hace desde el hábito a una mejor comprensión del Fin
+          </li>
+          <li>Método General, busca elementos aplicables a toda acción</li>
+        </ol>
+        <ol>
+          <h2 class="cita">Hic et Nunc</h2>
+          <li>Empezar a establecer hábitos diarios</li>
+          <li>Examen de conciencia en relación a la Verdad y Bien</li>
+          <li>Ordenar información, haciéndola interrelacionada</li>
+          <li></li>
+        </ol>
+      </details>
+    </li>
+    <!-- ++++++++++++++++++++++++++++++ -->
+    <li>
+      <details class="select">
+        <summary>El Silencio</summary>
+        <ol>
+          <h3>Silencio Exterior </h3>
+          <li> Silencio que será una práctica de todo el día, silencio que nos dispone al encuentro, que piensa antes
+            de actuar, que nos prepara para la humildad.</li>
+          <li>Marcos 1:35: "Muy de madrugada, cuando todavía estaba oscuro, Jesús se levantó, salió de la casa y se
+            fue a un lugar solitario, donde se puso a orar."</li>
+          <li> Es el proceso de aquietar los pensamientos, las preocupaciones y las distracciones internas para
+            escuchar la voz de Dios en nuestro interior.</li>
+          <li></li>
+          <!-- +++++++++++++++++++++++++++ -->
+          <h3> El silencio interior </h3>
+          <li>San Juan de la Cruz: “La palabra de Dios es el silencio de Dios”.</li>
+          <li>San Francisco de Sales: “Nunca estamos menos solos que cuando estamos solos con Dios”.</li>
+          <li> El objeto de la oración, primariamente, es la escucha del Señor. Por eso la primera actitud será la del
+            silencio. Para escuchar debemos callar. <br><br>
+            Antes de cada oración, acción, pensamiento, hagamos un instante de silencio, ni corto ni prolongado.
+            <br>El necesario espacio para entrar en sintonía con el Señor
+          </li>
+          <li>Mateo 6:6: "Pero tú, cuando ores, entra en tu cuarto, cierra la puerta y ora a tu Padre, que está en lo
+            secreto”</li>
+          <li></li>
+        </ol>
+        <br><br></p>
+      </details>
+    </li>
+    <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
-            <summary></summary>
+            <summary>El método</summary>
             <ol>
-              <li></li>
-              <li></li>
+              <li>Definir el Fin</li>
+              <li>Definir los fundamentos</li>
               <li></li>
               <li></li>
             </ol>
