--- a/ecclesia/lectio/mateo/mateo9.html
+++ b/ecclesia/lectio/mateo/mateo9.html
@@ -2160,8 +2160,12 @@ La Iglesia, continuadora de esta misión, está llamada a proclamar con obras y 
         <details class="select">
           <summary>Metanoia</summary>
           <ol>
-            <li></li>
-            <li></li>
+            <li>La división como principio del fin</li>
+            <li>El primer paso siempre es entrar en contacto con Dios, y es el pecado el que lo impide, mi pecado.</li>
+            <li>El corazón dirige el pensamiento en una determinada dirección</li>
+            <li>Rechazar la verdad es alejarse de Dios, al tomar como mal lo que es Bien</li>
+            <li>El mudo es quien esta poseido por el mal, se le reconoce porque no proclama a Dios, ni le ora, ni lo alaba</li>
+            <li>vocación primera del Hombre: "la comunión con Dios.”(Catecismo de la Iglesia Católica, n. 518)</li>
             <li></li>
             <li></li>
           </ol>
@@ -2207,30 +2211,327 @@ La Iglesia, continuadora de esta misión, está llamada a proclamar con obras y 
       <li>
         <details class="select">
           <summary>Variaciones en el Texto</summary>
+          <strong>Variaciones textuales significativas en Mateo 9,35-38</strong><br><br>
+
+<strong>1. Biblia de Jerusalén (BJ)</strong><br>
+“Jesús recorría todas las ciudades y aldeas, enseñando en sus sinagogas, proclamando la Buena Nueva del Reino y sanando toda enfermedad y toda dolencia. <br>
+Al ver a la muchedumbre, sintió compasión de ella, porque estaban vejados y abatidos como ovejas que no tienen pastor. <br>
+Entonces dice a sus discípulos: «La mies es mucha, pero los obreros pocos; <br>
+rogad, pues, al Dueño de la mies que envíe obreros a su mies».”<br><br>
+
+<strong>2. Vulgata Latina</strong><br>
+“Et circuibat Jesus omnes civitates et castella, docens in synagogis eorum, et praedicans Evangelium regni, et curans omnem languorem et omnem infirmitatem. <br>
+Videns autem turbas, misertus est eis: quia erant vexati et jacentes sicut oves non habentes pastorem. <br>
+Tunc dicit discipulis suis: Messis quidem multa, operarii autem pauci. <br>
+Rogate ergo Dominum messis, ut mittat operarios in messem suam.”<br><br>
+
+<strong>3. Nueva Versión Internacional (NVI)</strong><br>
+“Jesús recorría todos los pueblos y aldeas, enseñando en las sinagogas, anunciando las buenas nuevas del reino y sanando toda enfermedad y dolencia. <br>
+Al ver a las multitudes, tuvo compasión de ellas porque estaban agobiadas y desamparadas, como ovejas sin pastor. <br>
+Dijo a sus discípulos: «La cosecha es abundante, pero son pocos los obreros. <br>
+Pídanle, por tanto, al Señor de la cosecha que envíe obreros a recogerla».”<br><br>
+
+<strong>4. La Biblia de las Américas (LBLA)</strong><br>
+“Jesús recorría todas las ciudades y aldeas, enseñando en sus sinagogas, proclamando el evangelio del reino y sanando toda enfermedad y toda dolencia. <br>
+Al ver las multitudes, tuvo compasión de ellas, porque estaban angustiadas y abatidas como ovejas que no tienen pastor. <br>
+Entonces dijo a sus discípulos: «La mies es mucha, pero los obreros pocos. <br>
+Por tanto, rogad al Señor de la mies que envíe obreros a su mies».”<br><br>
+
+<strong>5. Biblia Interlineal Griego-Español (traducción literal)</strong><br>
+“Y estaba yendo alrededor Jesús por todas las ciudades y aldeas, enseñando en las sinagogas de ellos y proclamando el evangelio del reino y curando toda enfermedad y toda debilidad. <br>
+Y viendo a las multitudes tuvo compasión de ellas, porque estaban fatigadas y dispersas como ovejas no teniendo pastor. <br>
+Entonces dice a los discípulos: La mies grande, los obreros pocos; <br>
+rogad, pues, al señor de la mies que envíe obreros a la mies de él.”<br><br>
+
+<hr><br>
+
+<strong>Diferencias textuales relevantes</strong><br><br>
+
+<strong>• “Vejados y abatidos” (BJ) vs. “agobiadas y desamparadas” (NVI) vs. “angustiadas y abatidas” (LBLA)</strong><br>
+— Las traducciones reflejan distintos matices del griego: <em>ἐκλελυμένοι</em> (cansados, debilitados) y <em>ἐρριμμένοι</em> (tirados, abandonados).<br><br>
+
+<strong>• “Tuvo compasión” vs. “misertus est” (Vulgata)</strong><br>
+— La Vulgata usa “misertus est”, raíz de “misericordia”.<br>
+— El griego original usa <em>ἐσπλαγχνίσθη</em>, que indica una conmoción profunda en las entrañas (compasión visceral).<br><br>
+
+<strong>• “Mies” vs. “cosecha”</strong><br>
+— “Mies” (BJ, LBLA) conserva el lenguaje tradicional.<br>
+— “Cosecha” (NVI) es una adaptación más contemporánea.<br><br>
+
+<strong>• Diferencias en la traducción del mandato:</strong><br>
+— “Rogad” (BJ, LBLA) conserva el imperativo tradicional.<br>
+— “Pídanle” (NVI) actualiza el lenguaje para mayor claridad.<br><br>
+
+<strong>• El Interlineal resalta verbos en tiempo imperfecto:</strong><br>
+— “Estaba yendo alrededor Jesús” (ἦν περιάγων), indicando continuidad y actividad misionera constante.<br><br>
+
+Estas variaciones textuales reflejan diferencias en estilo, énfasis teológico y adaptación cultural entre las traducciones, pero todas mantienen el núcleo del mensaje sobre la compasión de Jesús y la necesidad de obreros para la misión.<br>
         </details>
       </li>
       <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
           <summary>Paralelos</summary>
+          <strong>2. Textos y temas paralelos a Mateo 9,35-38</strong><br><br>
+
+<ol>
+  <li><strong>Marcos 6,34</strong><br>
+  “Y al desembarcar, vio una gran multitud y tuvo compasión de ellos, 
+  porque eran como ovejas que no tenían pastor; 
+  y comenzó a enseñarles muchas cosas.”<br>
+  <em>Paralelo directo al motivo de las ‘ovejas sin pastor’ y la compasión de Jesús.</em><br><br></li>
+
+  <li><strong>Marcos 3,13-15</strong><br>
+  Jesús llama y envía a sus discípulos para predicar y expulsar demonios.<br>
+  <em>Conexión con la misión y la necesidad de obreros enviados.</em><br><br></li>
+
+  <li><strong>Marcos 1,38</strong><br>
+  “Vamos a otra parte... porque para eso he venido.”<br>
+  <em>El recorrido constante de Jesús por pueblos y ciudades, como en Mt 9,35.</em><br><br></li>
+
+  <li><strong>Lucas 10,1-3</strong><br>
+  Envío de los setenta y dos discípulos.<br>
+  Incluye la frase paralela: “La cosecha es abundante, pero los obreros pocos.”<br>
+  <em>Este es el paralelo más fuerte en la tradición sinóptica.</em><br><br></li>
+
+  <li><strong>Lucas 7,21-23</strong><br>
+  Jesús anuncia su misión sanadora: ciegos, cojos, leprosos, pobres.<br>
+  <em>Resume la actividad que Mateo describe: enseñar, proclamar, sanar.</em><br><br></li>
+
+  <li><strong>Ezequiel 34,5-6</strong><br>
+  “Mis ovejas andan dispersas por falta de pastor.”<br>
+  <em>Texto profético clave: Jesús asume el rol del Buen Pastor prometido.</em><br><br></li>
+
+  <li><strong>Números 27,16-17</strong><br>
+  Moisés pide a Dios un pastor para que el pueblo “no sea como ovejas sin pastor”.<br>
+  <em>Antecedente veterotestamentario directo de la expresión usada por Jesús.</em><br><br></li>
+
+  <li><strong>Zacarías 10,2</strong><br>
+  Denuncia la ausencia de guías verdaderos para el pueblo.<br>
+  <em>Conecta con la compasión de Jesús ante el abandono espiritual.</em><br><br></li>
+
+  <li><strong>Isaías 61,1</strong><br>
+  “El Espíritu del Señor está sobre mí… me ha enviado a anunciar la buena nueva.”<br>
+  <em>Texto programático del ministerio de Jesús: proclamar, sanar, liberar.</em><br><br></li>
+
+  <li><strong>Juan 4,35-38</strong><br>
+  “Alzad los ojos y mirad los campos, que ya están blancos para la siega.”<br>
+  <em>Paralelo conceptual fuerte sobre la ‘cosecha espiritual’.</em><br><br></li>
+
+  <li><strong>Juan 10,1-16</strong><br>
+  Discurso del Buen Pastor.<br>
+  <em>Amplía la imagen de las ‘ovejas sin pastor’ y el cuidado del rebaño.</em><br><br></li>
+
+  <li><strong>1 Pedro 5,2-3</strong><br>
+  Exhortación a los presbíteros: “pastoread el rebaño de Dios”.<br>
+  <em>El tema del envío de obreros para la mies se continúa en la Iglesia primitiva.</em><br><br></li>
+</ol>
+
+<b>Resumen:</b><br>
+Los paralelos subrayan tres ejes fundamentales:<br>
+• La compasión de Jesús como Buen Pastor prometido en el AT.<br>
+• La misión de proclamar, enseñar y sanar.<br>
+• La necesidad urgente de obreros enviados por Dios para la misión.<br>
+Estos textos enriquecen la comprensión de Mateo 9,35-38 al situarlo en el contexto más amplio de la misión de Jesús y la Iglesia.<br>
         </details>
       </li>
       <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
           <summary>Temas</summary>
+          <strong>3. Temas teológicos más relevantes de Mateo 9,35-38</strong><br><br>
+
+<ol>
+  <li><strong>La compasión de Jesús como revelación del corazón de Dios.</strong><br>
+  El término griego <em>ἐσπλαγχνίσθη</em> expresa una compasión profunda, visceral.<br>
+  No es solo un sentimiento humano, sino la manifestación del amor misericordioso del Padre. <br>
+  Jesús mira a las multitudes y las reconoce como “ovejas sin pastor”, cumpliendo así la profecía de Ez 34. <br>
+  La compasión es el motivo de su misión y de la misión de la Iglesia.<br><br></li>
+
+  <li><strong>Cristo como Buen Pastor prometido por los profetas.</strong><br>
+  En Jesús se realiza la promesa veterotestamentaria de un Pastor que guiará al pueblo (Ez 34; Nm 27,17).<br>
+  Mateo muestra a Cristo enseñando, sanando y anunciando el Reino: las funciones del Pastor-Mesías. <br>
+  La perícopa anticipa explícitamente la autodefinición de Jesús en Jn 10.<br><br></li>
+
+  <li><strong>La misión integral de Jesús: enseñar, proclamar y sanar.</strong><br>
+  Mateo resume en un solo versículo (9,35) toda la obra mesiánica: <br>
+  • Enseñar la verdad de Dios. <br>
+  • Proclamar el Reino presente. <br>
+  • Sanar toda enfermedad. <br>
+  La misión cristiana no se reduce a un aspecto: es anuncio, formación y acción sanadora integral.<br><br></li>
+
+  <li><strong>La necesidad urgente de obreros para la misión.</strong><br>
+  “La mies es mucha, los obreros pocos” expresa la desproporción entre la necesidad de evangelización y la disponibilidad humana. <br>
+  Jesús no solo observa la realidad: la interpreta teológicamente como signo de urgencia escatológica. <br>
+  La misión es inmensa porque la humanidad está sedienta de dirección, verdad y sanación.<br><br></li>
+
+  <li><strong>La misión no nace de la iniciativa humana, sino de la oración.</strong><br>
+  Jesús no dice “vayan”, sino antes: “Rogad al Señor de la mies”.<br>
+  La misión comienza en la súplica humilde; es Dios quien envía, llama y sostiene. <br>
+  La oración misionera une la compasión de Cristo con la disponibilidad de los discípulos.<br><br></li>
+
+  <li><strong>El Padre como “Señor de la mies”.</strong><br>
+  La imagen revela que la historia y la misión pertenecen a Dios; Él es dueño del campo, del tiempo y del fruto. <br>
+  Los discípulos no son dueños de la misión, sino servidores y enviados. <br>
+  Esta visión corrige toda tentación de apropiación, dominio o control pastoral.<br><br></li>
+
+  <li><strong>La dimensión eclesial y vocacional del texto.</strong><br>
+  El envío de obreros incluye a los Doce, pero también anticipa la vida de la Iglesia. <br>
+  La comunidad debe discernir, enviar, acompañar y sostener ministerios diversos que colaboren en la mies del Señor. <br>
+  El texto fundamenta teológicamente vocaciones como: sacerdotes, religiosos, catequistas, misioneros y agentes pastorales.<br><br></li>
+
+  <li><strong>El Reino de Dios como respuesta al abandono espiritual del mundo.</strong><br>
+  La multitud está “fatigada y dispersa”.<br>
+  La misión de Jesús responde a una necesidad existencial del ser humano: sentido, dirección, esperanza y sanación. <br>
+  El Reino se presenta como la verdadera alternativa a la desorientación de la humanidad sin pastor.<br><br></li>
+</ol>
+
+<b>Conclusión:</b><br>
+Mt 9,35-38 es un texto clave para comprender el corazón pastoral de Cristo y el fundamento de la misión cristiana. <br>
+La compasión, la oración, el envío y la urgencia de anunciar el Reino constituyen los pilares teológicos que sostienen toda acción evangelizadora de la Iglesia.<br>
+
         </details>
       </li>
       <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
           <summary>Patrística</summary>
+<ol>
+
+  <li>
+    <b>San Juan Crisóstomo</b><br>
+    Comenta que la compasión de Jesús revela su identidad divina y pastoral:<br>
+    “No basta con enseñar; también es necesario sentir compasión por los que no entienden. Por eso Él no sólo predica, sino que se duele de ellos, pues los veía como ovejas sin pastor.”<br>
+    (Homilía sobre Mateo 30,1)<br>
+    <br>
+    Sobre la mies abundante:<br>
+    “La mies es grande, pues todas las ciudades estaban preparadas para recibir la enseñanza; pero faltaban obreros, es decir, hombres dispuestos a sufrir y trabajar.”<br>
+    (Homilía sobre Mateo 30,2)<br>
+  </li>
+
+  <li>
+    <b>San Jerónimo</b><br>
+    Resalta la dimensión simbólica de la “mies” como la humanidad necesitada de salvación:<br>
+    “La mies es el pueblo que espera la palabra de Dios; los obreros son los predicadores que envía el Señor.”<br>
+    (Comentario al Evangelio de Mateo 9,38)<br>
+    <br>
+    Subraya la importancia de la oración previa a la misión:<br>
+    “Antes de enviar obreros, el Señor manda orar; porque ninguna obra apostólica es fructífera sin la oración.”<br>
+    (Comentario a Mateo, ad locum)<br>
+  </li>
+
+  <li>
+    <b>San Agustín</b><br>
+    Ve en Cristo al verdadero Pastor prometido en las Escrituras:<br>
+    “Cristo vio a las multitudes fatigadas; y siendo Él el verdadero Pastor, vino a reunir a las ovejas dispersas de Israel.”<br>
+    (Sermón 46, sobre los Pastores)<br>
+    <br>
+    Sobre la escasez de obreros:<br>
+    “Es mucha la mies del Señor, pero pocos los que trabajan. Muchos escuchan; pocos predican con fidelidad.”<br>
+    (Sermón 101,2)<br>
+  </li>
+
+  <li>
+    <b>Orígenes</b><br>
+    Interpreta la “compasión” de Cristo desde una teología espiritual:<br>
+    “La palabra dice que Él se compadeció, porque veía no solo los cuerpos cansados, sino las almas dispersas y debilitadas.”<br>
+    (Comentario a Mateo, Libro X, 10)<br>
+    <br>
+    Sobre la oración al Señor de la mies:<br>
+    “La mies de Dios es abundante, pero requiere de obreros santos. Por eso nos ordena pedir hombres dignos para tan gran tarea.”<br>
+    (Comentario a Mateo, Libro X, 11)<br>
+  </li>
+
+  <li>
+    <b>Hilario de Poitiers</b><br>
+    Insiste en la falta de líderes auténticos en Israel:<br>
+    “Eran ovejas sin pastor porque los que se decían pastores buscaban su propia gloria y no la gloria de Dios.”<br>
+    (Comentario a Mateo, 10,3)<br>
+  </li>
+
+  <li>
+    <b>Beda el Venerable</b><br>
+    Entiende la enseñanza y sanación de Jesús como prefiguración de la misión de la Iglesia:<br>
+    “Lo que hizo Cristo –enseñar, predicar y sanar– lo hace cada día la Iglesia, enviada por Él como obrera en la mies.”<br>
+    (Homilías sobre los Evangelios I,18)<br>
+  </li>
+
+</ol>
+
         </details>
       </li>
       <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
           <summary>Magisterio</summary>
+<ol>
+
+  <li>
+    <b>La misión nace de la compasión de Cristo</b><br>
+    El Magisterio enseña que la misión de la Iglesia está motivada por el corazón compasivo de Jesús hacia las multitudes.<br>
+    El Papa Francisco afirma:<br>
+    “La evangelización es antes que nada un acto de amor. Jesús sintió compasión por las muchedumbres; de ese corazón brota la misión de la Iglesia.”<br>
+    (Evangelii Gaudium, 24)<br>
+  </li>
+
+  <li>
+    <b>Cristo, Buen Pastor, fundamento del ministerio pastoral</b><br>
+    Los pastores de la Iglesia reciben su identidad del Buen Pastor que ve a su pueblo “como ovejas sin pastor”.<br>
+    El Concilio Vaticano II declara:<br>
+    “Cristo, Pastor eterno, edificó la Iglesia y la envió a anunciar el Evangelio… Los obispos son establecidos por el Espíritu Santo para pastorear la Iglesia de Dios.”<br>
+    (Lumen Gentium, 20)<br>
+    <br>
+    Y añade:<br>
+    “Los pastores deben imitar la caridad del Buen Pastor, que busca a las ovejas dispersas.”<br>
+    (Lumen Gentium, 27)<br>
+  </li>
+
+  <li>
+    <b>La mies es mucha: la misión universal e inaplazable</b><br>
+    El Magisterio ve en esta frase el llamado permanente a evangelizar a todos los pueblos.<br>
+    San Juan Pablo II escribe:<br>
+    “La Iglesia está llamada a una misión universal. La visión de Jesús ante la mies abundante sigue siendo actual.”<br>
+    (Redemptoris Missio, 3)<br>
+  </li>
+
+  <li>
+    <b>La oración al Señor de la mies precede y sostiene toda misión</b><br>
+    El Magisterio insiste en que la misión no es primero estrategia, sino súplica confiada.<br>
+    El Papa Benedicto XVI enseña:<br>
+    “La misión no avanza sin oración… El Señor mismo nos mandó pedir obreros para su mies.”<br>
+    (Mensaje para la Jornada Mundial de Oración por las Vocaciones, 2012)<br>
+    <br>
+    El Concilio afirma:<br>
+    “La misión debe ser acompañada y sostenida por la oración.”<br>
+    (Ad Gentes, 36)<br>
+  </li>
+
+  <li>
+    <b>La escasez de obreros y la responsabilidad vocacional de la Iglesia</b><br>
+    La Iglesia entiende estas palabras como mandato para promover vocaciones sacerdotales, religiosas y laicales misioneras.<br>
+    San Pablo VI declara:<br>
+    “La necesidad de obreros para la mies del Señor es grande. La Iglesia debe suscitar, formar y enviar servidores del Evangelio.”<br>
+    (Evangelii Nuntiandi, 75)<br>
+    <br>
+    El Papa Francisco añade:<br>
+    “Toda comunidad cristiana está llamada a pedir vocaciones y a ser tierra fértil para nuevos obreros en la mies.”<br>
+    (Christus Vivit, 274)<br>
+  </li>
+
+  <li>
+    <b>La misión como prolongación de la obra de Cristo: enseñar, predicar y sanar</b><br>
+    El Magisterio enseña que la triple acción de Jesús en este texto (enseñar–predicar–sanar) define la identidad de la Iglesia.<br>
+    El Catecismo afirma:<br>
+    “La Iglesia continúa la misión de Cristo… Enseña, evangeliza y sana por medio de los sacramentos y la caridad.”<br>
+    (Catecismo de la Iglesia Católica, 875 y 1122)<br>
+    <br>
+    Y añade:<br>
+    “La caridad es el alma de toda obra apostólica.”<br>
+    (CIC 864)<br>
+  </li>
+
+</ol>
+
         </details>
       </li>
       <!-- ++++++++++++++++++++++++++++++ -->
