--- a/ecclesia/oracion/01Statio.html
+++ b/ecclesia/oracion/01Statio.html
@@ -388,11 +388,11 @@
       <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
-          <summary>La Oración</summary>
+          <summary>Oratio Quotidianum</summary>
           <ol>
             <li>La oración Vocal Diaria <br>
-              Oratio Quotidianum<br>
               Fijar un lugar <br>
+              La oración que se hará<br>
               Un momento al día</li>
 
 
@@ -403,17 +403,21 @@
     <!-- ++++++++++++++++++++++++++++++ -->
        <li>
       <details class="select">
-        <summary>El Bien</summary>
+        <summary>Bonum Eligiere</summary>
         <ol>
            <li>Desarrollar la Gracia del Don, como camino al bien <br>
                   “El bien es lo que perfecciona una realidad según su naturaleza.” Aristóteles  </li>
               <li> <i>
-        <p>Bonum facere, <br>
+        <p>
+          Bonum Eligiere <br>
+          Bonum facere, <br>
           Bene facere, <br>
-          Bonum eligiere</p>
-        <p>Hacer el bien, <br>
-          hacerlo bien, <br>
-          elegir al Bien</p>
+        </p>
+        <p>
+          Elegir al Bien <br>
+          Hacer el bien, <br>
+          Hacerlo bien, <br>
+        </p>
       </i></li>
       <li>El bien se inicia con la Verdad</li>
       <li>El bien tiene como fin ser Uno con el Señor</li>
@@ -427,12 +431,10 @@
  
        <li>
       <details class="select">
-        <summary>Examen de Conciencia</summary>
+        <summary>Examen Conscientiae</summary>
         <ol>
           <li>Todas las noches, reconocer que se puede hacer mejor y buscar como</li>
           <li>El error muestra donde debo mejorar, Dios muestra su amor iluminando mi mente para comprender y desear cambiar </li>
-          <li></li>
-          <li></li>
         </ol>
         <p><br /><br /></p>
       </details>
