--- a/ecclesia/oracion/02Statio.html
+++ b/ecclesia/oracion/02Statio.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../../styles/style.css" />
-  <title>STATIO</title>
+  <title>STATIO 02</title>
 </head>
 
 <body>
@@ -315,6 +315,19 @@
       </li>
       <!-- ++++++++++++++++++++++++++++++ -->
       <h3>STATIO2</h3>
+           <li>
+        <details class="select">
+          <summary>La Gracia</summary>
+          <ol>
+            <li>Dios mismo ama, habita y motiva a cada persona a su mayor Bien</li>
+            <li>La Gracia precede a la acción, la tomemos o no.</li>
+            <li>Todo es Gracia y la Gracia está en todo</li>
+            <li>La vocación es Gracia</li>
+          </ol>
+          <p><br /><br /></p>
+        </details>
+      </li>
+      <!-- ****************************** -->
       <li>
         <details class="select">
           <summary>Precatio Quotidiana</summary>
@@ -344,7 +357,33 @@
         </details>
       </li>
       <!-- ****************************** -->
-      <li>
+    <li>
+        <details class="select">
+          <summary>Bonum Eligiere</summary>
+          <ol>
+              <li> <i>
+                <p>
+                  Bonum Agnoscere,<br>
+                  Bonum Eligiere <br>
+                  Bonum Facere, <br>
+                  cum Summo Bono unum esse.
+                </p>
+                <p>
+                  Reconocer el BIEN<br>
+                  elegir el BIEN <br>
+                  Hacer el BIEN<br>
+                  Ser uno con el BIEN [Dios]
+                </p>
+              </i></li>
+            <li>El bien lo conocemos en sus resultados permanentes</li>
+            <li>El Examen Conscientiae debe de tener un método, que se aplique constantemente y así se perfeccione</li>
+         
+          </ol>
+          <p><br /><br /></p>
+        </details>
+      </li>
+      <!-- ****************************** -->
+          <li>
         <details class="select">
           <summary></summary>
           <ol>
@@ -366,19 +405,7 @@
     <!-- /////////////////////////////////////// -->
     <ol>
       <!-- ****************************** -->
-      <li>
-        <details class="select">
-          <summary></summary>
-          <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ol>
-          <p><br /><br /></p>
-        </details>
-      </li>
-      <!-- ****************************** -->
+   
       <li>
         <details class="select">
           <summary></summary>
