--- a/ecclesia/oracion/04Statio.html
+++ b/ecclesia/oracion/04Statio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../styles/style.css" />
-    <title>STATIO</title>
+    <title>STATIO 04</title>
   </head>
   <body>
     <p id="alInicio" class="principio"></p>
@@ -53,6 +53,96 @@
       </div>
       <!-- /////////////////////////////////////// -->
       <ol>
+        <li>
+        <details class="select">
+          <summary>Mt 1,1-17</summary>
+
+          <ol>
+            <h2>Conversio</h2>
+            <li>Orden, tener conciencia de las condiciones, posibilidades etc.</li>
+            <li>Prioridades, interacción entre virtudes y orden</li>
+            <li>Actitudes, ensayos de acciones</li>
+          </ol>
+          <ol>
+            <h2>Facere</h2>
+            <li>Acciones, interacción con la realidad</li>
+            <li>Hábito, método inicial</li>
+          </ol>
+          <ol>
+            <h2>Dicere</h2>
+            <li>Método Concreto, mejora la acción concreta y lo hace desde el hábito a una mejor comprensión del Fin
+            </li>
+            <li>Método General, busca elementos aplicables a toda acción</li>
+          </ol>
+          <ol>
+            <h2 class="cita">Hic et Nunc</h2>
+            <li>Empezar a establecer hábitos diarios</li>
+            <li>Examen de conciencia en relación a la Verdad y Bien</li>
+            <li>Ordenar información, haciéndola interrelacionada</li>
+            <li></li>
+          </ol>
+        </details>
+      </li>
+      <!-- ++++++++++++++++++++++++++++++ -->
+      <li>
+        <details class="select">
+          <summary>El Silencio</summary>
+          <ol>
+            <h3>Silencio Exterior </h3>
+            <li> Silencio que será una práctica de todo el día, silencio que nos dispone al encuentro, que piensa antes
+              de actuar, que nos prepara para la humildad.</li>
+            <li>Marcos 1:35: "Muy de madrugada, cuando todavía estaba oscuro, Jesús se levantó, salió de la casa y se
+              fue a un lugar solitario, donde se puso a orar."</li>
+            <li> Es el proceso de aquietar los pensamientos, las preocupaciones y las distracciones internas para
+              escuchar la voz de Dios en nuestro interior.</li>
+            <li></li>
+            <!-- +++++++++++++++++++++++++++ -->
+            <h3> El silencio interior </h3>
+            <li>San Juan de la Cruz: “La palabra de Dios es el silencio de Dios”.</li>
+            <li>San Francisco de Sales: “Nunca estamos menos solos que cuando estamos solos con Dios”.</li>
+            <li> El objeto de la oración, primariamente, es la escucha del Señor. Por eso la primera actitud será la del
+              silencio. Para escuchar debemos callar. <br><br>
+              Antes de cada oración, acción, pensamiento, hagamos un instante de silencio, ni corto ni prolongado.
+              <br>El necesario espacio para entrar en sintonía con el Señor
+            </li>
+            <li>Mateo 6:6: "Pero tú, cuando ores, entra en tu cuarto, cierra la puerta y ora a tu Padre, que está en lo
+              secreto”</li>
+            <li></li>
+          </ol>
+          <br><br></p>
+        </details>
+      </li>
+      <!-- ++++++++++++++++++++++++++++++ -->
+      <li>
+        <details class="select">
+          <summary>El método</summary>
+          <ol>
+            <li>Definir el Fin</li>
+            <li>Definir los fundamentos</li>
+            <li></li>
+            <li></li>
+          </ol>
+          <p><br /><br /></p>
+        </details>
+      </li>
+      <!-- ****************************** -->
+      <li>
+        <details class="select">
+          <summary>Summarium ---tempo</summary>
+          <ol>
+            <li>1. Empezar a establecer hábitos diarios
+              2. Examen de conciencia en relación a la Verdad y Bien
+              3. Ordenar información, haciéndola interrelacionada, unidad.
+              4. Concentrarse en cada actividad
+            </li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ol>
+          <p><br /><br /></p>
+        </details>
+      </li>
+      <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
